hphp/test/zend/bad/ext/reflection/tests/019.php
<?php
$f = new ReflectionFunction("sleep");
var_dump($f->getExtensionName());
?>
